--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.18.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.1",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
