--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
     "redux-promise": "^0.5.3"
   },
   "scripts": {
