--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "redux-promise-middleware": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
